--- a/kubernetes/aws-secret.yaml
+++ b/kubernetes/aws-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: QVNJQVJLQklPSVhORDdUNTQ0Njc=
+  credentials: "Base 64 of AWS Credentials"
