--- a/kubernetes/env-secret.yaml
+++ b/kubernetes/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: bXNpbmdoMjk2
-  POSTGRES_PASSWORD: UnVjaGkyMDIy
+  POSTGRES_USERNAME: 'Base 64 of ${POSTGRES_USERNAME}'
+  POSTGRES_PASSWORD: 'BASE 64 of ${POSTGRES_PASSWORD}'
